add media.zip and set README.md

--- a/finished_md/12.md
+++ b/finished_md/12.md
@@ -10,19 +10,19 @@
 
 在很多方面，第11章突出了本书中关卡设计知识在开发者工具箱中的地位。这些思想超出了技术。虽然它们影响着我们在面对我们的二维艺术或三维内容创作程序、中间件游戏引擎或专有软件时如何构建关卡，但它们具有更大的意义。从一个永恒的艺术形式（建筑）学习空间设计原则对关卡设计的优势在于，我们今天使用的原则在我们目前最喜爱的游戏引擎成为历史烂尾之后依然适用。在本文中引用的许多最有影响力的作品至少有50年历史。许多作品的历史甚至要数百年，甚至数千年，但它们通过它们的空间布置创造的体验经受住了时间和密集人类互动所带来的新兴叙事的考验。通过这些经久不衰的空间设计原则，我们希望构建经久不衰的游戏体验。
 
-![](D:/VariousAsset/Books/AAALD_translate/translated_md/media/media/image391.jpeg){width="1.6181189851268591in" height="1.5066666666666666in"}
+![](./media/media/image391.jpeg){width="1.6181189851268591in" height="1.5066666666666666in"}
 
 图4.12  在加法颜色模型中，红、绿和蓝三个光的主色相互组合形成新的颜色，最终组合起来形成白光。
 
-![](D:/VariousAsset/Books/AAALD_translate/translated_md/media/media/image392.jpeg){width="2.7833081802274715in" height="1.6733333333333333in"}
+![](./media/media/image392.jpeg){width="2.7833081802274715in" height="1.6733333333333333in"}
 
 图4.13 颜色环。相邻三种颜色称为类似色，而在环的对面的颜色是互补色。在视觉设计中使用互补色可以帮助对比元素显得突出。
 
-![](D:/VariousAsset/Books/AAALD_translate/translated_md/media/media/image393.jpeg){width="2.103967629046369in" height="1.6066666666666667in"}
+![](./media/media/image393.jpeg){width="2.103967629046369in" height="1.6066666666666667in"}
 
 图5.26 《Innsmouth的噩梦》使用阴影，在高动作点之间创造模棱两可的游戏时刻。这使得在挑战休息时，游戏仍能保持紧张的氛围。
 
-![](D:/VariousAsset/Books/AAALD_translate/translated_md/media/media/image394.jpeg){width="2.5003641732283466in" height="5.04in"}
+![](./media/media/image394.jpeg){width="2.5003641732283466in" height="5.04in"}
 
 图5.27 《SWARM！》的截图展示出即使在每个关卡环境中只限制一个灯光的情况下，可以实现不同的照明条件。
 
