修正第六章被精简的部分

--- a/finished_md/6.md
+++ b/finished_md/6.md
@@ -174,7 +174,7 @@
 
 ![图6.12 《塞尔达传说：时之笛》中格鲁德要塞的迷宫采用栅栏墙体，让玩家始终能看到终点处的宝箱](./media/media/image309.jpeg){width="2.498202099737533in" height="2.22in"}
 
-分层墙体也可用于挑战过程中保持玩家目标感。《塞尔达传说》系列常采用此法：《时之笛》的格鲁德要塞终点迷宫要求玩家用钥匙解锁路径，终点奖励是强力魔法武器"冰箭"。设计师没有使用实心石墙，而是采用透明金属栅栏纹理，使玩家能透过迷宫走廊看到目标。《黄昏公主》的时之神殿有个房间需通过多次扳动开关重组分层墙体，墙体的镂空处既提供解谜路径，又持续展示终点景象，帮助玩家在对付敌人和收集宝物时保持目标感。
+分层墙体也可用于挑战过程中保持玩家目标感。《塞尔达传说》系列常采用此法：《时之笛》的格鲁德要塞终点迷宫要求玩家用钥匙解锁路径，终点奖励是强力魔法武器"冰箭"。设计师没有使用实心石墙，而是采用透明金属栅栏纹理，使玩家能透过迷宫走廊看到目标。《黄昏公主》的时之神殿有个房间需通过多次扳动开关重组分层墙体，墙体的镂空处既提供解谜路径，又持续展示终点景象，帮助玩家在对付敌人和收集宝物时保持目标感。这种设计在玩家应对敌人或收集宝物时，通过持续可见的终极目标维持任务专注度。后续将探讨结合宗教建筑层叠特色的最终拒绝空间类型。
 
 ### 奥库空间
 
@@ -196,27 +196,29 @@
 
 ### 长期与短期目标
 
-根据复杂度和时长，游戏通常设置多层次目标。例如《超级马里奥兄弟》的长期目标是拯救碧姬公主，但原版32个关卡若仅以最终救公主为成功标志，将造成大量无效玩法。实际上游戏还设有消灭敌人、获取强化道具、收集金币与额外生命、通过每个独立关卡等次级目标。其机制甚至支持玩家自设目标——在华盛顿史密森尼美国艺术博物馆的"电子游戏艺术"展上，参观者就自发竞赛谁能在三分钟内通关8-1关卡。
+> 根据复杂度和时长，游戏通常设置多层次目标。例如《超级马里奥兄弟》的长期目标是拯救碧姬公主，但原版32个关卡若仅以最终救公主为成功标志，将造成大量无效玩法。实际上游戏还设有消灭敌人、获取强化道具、收集金币与额外生命、通过每个独立关卡等次级目标。其机制甚至支持玩家自设目标——在华盛顿史密森尼美国艺术博物馆的"电子游戏艺术"展上，参观者就自发竞赛谁能在三分钟内通关8-1关卡。
 
-《超级马里奥兄弟》等游戏通过*长期目标*、*短期目标*与*玩家自定义目标*的共存保持吸引力，这展示了目标在游戏中的可扩展性。长期目标通常是重要叙事奖励或任务终点，需要持续努力；短期目标则更为即时（通关小关卡、击败敌人等）。采用任务系统的游戏（如《创世纪IV》掌握八美德、探索地牢等）通过长短目标链引导玩家推进游戏。例如获取美德符文是短期目标，掌握单项美德是中期目标，集齐八美德成为化身则是终极长期目标。
+> 超级马里奥兄弟》等游戏通过*长期目标*、*短期目标*和*玩家自定义目标*的有机结合维持玩家兴趣，展示了目标在游戏中的*可扩展性*。长期目标通常是重要叙事奖励或任务终点，需要持续努力达成；短期目标则更为即时：通关某个阶段、击败敌人、找到生命强化道具等。
 
-### 组件式任务结构
+> 采用*任务系统*（要求玩家获取物品或完成特定行动）的游戏，往往通过长短目标的组合链推动进程。《创世纪IV：圣者传奇》要求玩家通过进入八座神庙并在游戏世界中实践八种美德来达成终极目标，同时还有神器寻找和地下城探索等支线任务。掌握全部美德成为圣者是整体长期目标，而每个美德又可作为阶段性的长期目标。例如进入美德神殿需要先获得对应符文——获取符文是短期目标，掌握美德是中期目标，最终服务于掌握八美德的终极目标。
 
-这种"收集关键物品推动游戏进程"的任务结构被广泛运用，霍华德将其类比为*组件之杖*叙事结构——角色需收集魔法神器的七个部件。在游戏中，每个组件（水晶、金币等）通常对应一个关卡目标，而关卡本身又由解谜、战斗等小挑战串联而成。这种结构不仅能标记游戏进程，还可建立稳定的目标-奖励节奏。
+## 多段式神杖结构
 
-### 奖励投放节奏
+> 这种"收集多个关键物品推进游戏"的任务结构被广泛运用，如《超级马里奥大陆2》收集六枚金币解锁城堡，《黄金太阳》激活元素灯塔等。霍华德将其类比为"多段式神杖"叙事结构——玩家需收集魔法神杖的七个部件。首段可能通过剧情意外获得，后续部件则需通过游戏进程逐步解锁。该结构不仅用于推进游戏叙事，更能为关卡设计建立稳定的目标-奖励节奏：每个神杖部件（或水晶、金币、少女等）通常对应某个关卡（如地下城）的终极目标，而每个关卡又由谜题、敌人遭遇、障碍赛道等小型挑战串联而成。
 
-可预测的奖励投放让玩家能*预期*即将获得的回报，这类似巴甫洛夫的经典条件反射原理——玩家会知道攻克地牢后必将获得物品。这种节奏对维持玩家投入至关重要，它让玩家明确游戏行为的回报周期，从而持续产生动力。
+## 奖励机制设计
 
-组件之杖远非唯一的奖励节奏模式：街机游戏每关结束给予奖励，定期出现特别奖励关；现代手游则提供稳定点数/货币，用于购买游戏内物品，形成"再来一局"的消费循环。在关卡设计中，*稳定的奖励节奏*通过可预期性来激励游戏行为、诱发探索并培养好奇心。例如玩家若知每经过若干地牢房间就有奖励，就会持续游玩；当预期奖励未立即出现时，更会主动探索当前房间。
+> 可预测的奖励发放机制能让玩家*预期*即将到来的回报，这类似于巴甫洛夫的经典条件反射原理——玩家会明确知道击败地下城后将获得物品。这种目标-奖励节奏对维持玩家参与度至关重要，它让玩家清楚何时能获得游戏回报从而保持动力。
 
-这种原理同样适用于符号化美术资源——若玩家建立"打破木箱可得资源"的认知，就会主动搜寻场景中的可破坏物。奖励为探索游戏空间提供核心动机，而稳定的投放节奏则帮助玩家建立对下次回报的预期。
+> "多段式神杖"远非唯一的奖励机制。街机游戏每关结束后固定发放奖励，通常每通过2-3个常规关卡就会出现特殊奖励关卡——若玩家在第三关中途死亡，投币续关的动力将显著增强。现代移动/社交游戏同样采用稳定奖励机制，通关获得固定点数或货币用于购买道具，形成"再来一局"的消费心理。
+
+> 在关卡设计层面，稳定的奖励机制能有效激励游戏行为、促进探索并通过*一致性*培养好奇心。当玩家明确知道每经过X个地下城房间就会获得奖励时，他们会持续游戏以获取下次回报。若预期奖励未立即出现，玩家会更积极探索当前房间。这种机制甚至延伸至象征性美术资产——当确立"破坏木箱/陶罐可获得资源"的规则后，玩家会主动探索游戏空间寻找这些物品。奖励为探索行为提供核心动机，而稳定的奖励节奏则帮助玩家建立对下次回报的预期。
 
 ## 本章总结
 
-本章探讨了游戏奖励作为关卡设计驱动力的作用。我们分析了奖励对游戏行为的激励效应、对探索欲的诱发作用以及对好奇心的塑造功能，考察了游戏与游戏空间中的奖励类型（包括物品容器型奖励空间、节奏调节型休憩空间、叙事推进型舞台等），研究了通过延迟获取增强奖励吸引力的空间手法，以及如何通过节奏控制建立目标-奖励机制。这些要素共同构成了玩家游戏体验的个性化叙事。
+> 本章我们探讨了游戏奖励作为关卡设计中的核心驱动要素。通过系统分析游戏奖励在关卡中的作用机制，揭示了其如何有效激励玩家行为、促进探索欲望并激发好奇心。我们深入研究了游戏空间中的多种奖励类型，包括：容纳奖励物品的特殊空间结构、快节奏动作中的缓冲休息区，以及推动剧情发展的叙事节点。同时剖析了通过延迟奖励获取来增强满足感的空间设计策略，以及如何通过合理编排这些空间与奖励来构建目标-奖励循环体系。我们所讨论的每个主题，都以独特的方式共同塑造着玩家在游戏体验中形成的个人化叙事。
 
-下一章我们将进一步探索游戏空间如何作为叙事载体——既包含设计师预设的叙事，也包含玩家互动衍生的叙事。
+> 下一章我们将进一步探索游戏空间作为叙事载体的双重属性——既包含设计师预设的叙事框架，也涵盖玩家通过交互行为创造的动态叙事。
 
 ## 参考文献注释
 
